--- a/Lista_04/Gemfile
+++ b/Lista_04/Gemfile
@@ -40,3 +40,5 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'figaro', '~> 1.1', '>= 1.1.1'
 gem 'validates_timeliness', '~> 4.0', '>= 4.0.2'
+gem 'simple_token_authentication' ,  '~> 1.0'
+gem 'devise', '~> 4.0', '>= 4.8.0'
